Bug 390339 - Can't use Discover to write an app's first review
Summary: Can't use Discover to write an app's first review
Status: VERIFIED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.12.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-12 19:59 UTC by Ivan S
Modified: 2018-02-13 03:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan S 2018-02-12 19:59:03 UTC
When looking at reviews for applications without any reviews, there is no option to write a review.
Comment 1 Nate Graham 2018-02-12 22:02:56 UTC
I think this is a bug, not an intentional design. Still, +1.
Comment 2 Aleix Pol 2018-02-13 02:07:00 UTC
Git commit 3dd3fed38b41f679d7a9748a8dd2d0a67758cd7d by Aleix Pol.
Committed on 13/02/2018 at 02:05.
Pushed by apol into branch 'Plasma/5.12'.

Notify about the backend

M  +1    -1    libdiscover/ReviewsBackend/ReviewsModel.h

https://commits.kde.org/discover/3dd3fed38b41f679d7a9748a8dd2d0a67758cd7d
Comment 3 Ivan S 2018-02-13 03:29:13 UTC
I await the fix in 5.12.1!
Comment 4 Nate Graham 2018-02-13 03:41:26 UTC
Verified, works great!