Notify about the backend

BUG: 390339